2016-06-01  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_notify_slot_change): New.
	(ccid_thread): Call ccid_notify_slot_change at
	interface_reset and EV_CARD_CHANGE.

2016-05-31  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c, src/stm32f103.h: Remove.
	* src/adc_stm32f103.c, src/sys.c: Remove.

	* src/usb_ctrl.c (usb_cb_interface): call ccid_usb_reset.
	(usb_cb_handle_event): Likewise.

	* src/usb-ccid.c (ccid_thread): Handle RESET->CONFIGURE process
	correctly.
	(ccid_thread): Handle SET_INTERFACE correctly.

	* polarssl/library/aes.c (FT0, FT1, FT2): Add "weak" flag.

	* src/neug.c: Update from NeuG.

	* src/usb_desc.c (usb_cb_get_descriptor): Only valid if USE_SYS3.

	* src/Makefile.in (USE_SYS, USE_USB, USE_ADC): Enabled.
	(CHIP): Add.

	* src/sys.c, src/sys.h: Remove.
	* src/usb_stm32f103.c, src/usb_lld.h: Remove.
	* src/adc_stm32f103.c, src/adc.h: Remove.

	* chopstx: Update to 0.12.

2016-05-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (led_blink, main): Fix LED blink protocol.

2016-05-20  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.0.
	* src/usb-ccid.c (ccid_thread): Fix timeout.
	(icc_handle_timeout, icc_send_status): Tweak.

2016-05-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_ctrl.c (usb_cb_ctrl_write_finish): Set bDeviceState.

	* src/usb-ccid.c: Rename from usb-icc.c.
	(ccid_thread): Handle reGNUal upgrade.

	* src/Makefile.in (CSRC): Follow the change.

	* chopstx: Update to 0.11.

2016-05-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in: Tweak thread size.
	* src/main.c (main): Use chopstx_setpriority.
	* src/usb-icc.c (ccid_init): Use new eventflag API.

	* regnual/regnual.c (nvic_enable_intr): New.
	(main): Call nvic_enable_intr.

	* chopstx: Update.

2016-05-16  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/regnual.c (usb_cb_rx_ready, usb_cb_tx_done)
	(usb_cb_device_reset): Follow the change of USB API.

	* chopstx: Update.
	* src/sys.c: Update from Chopstx.

2016-05-13  Niibe Yutaka  <gniibe@fsij.org>
